começando sistema de grid

--- a/components/sidebar/sidebar.html
+++ b/components/sidebar/sidebar.html
@@ -13,11 +13,11 @@
 
         <div class="buttonsSidebar">
 
-            <div class="buttonSidebar" onclick="window.location.href='./../../pages/dadosCadastrais/dadosCadastrais.php'">
+            <div class="buttonSidebar mt-2" onclick="window.location.href='./../../pages/dadosCadastrais/dadosCadastrais.php'">
                 <p>Dados cadastrais</p>
                 <hr class="hrSidebar">
             </div>
-            <div class="buttonSidebar" onclick="">
+            <div class="buttonSidebar" onclick="window.location.href='./../../pages/historicoLances/historicoLances.php'">
                 <p>Histórico de lances</p>
                 <hr class="hrSidebar">
             </div>
