--- a/components/grid/grid.scss
+++ b/components/grid/grid.scss
@@ -1,1 +1,24 @@
 @import './../../libs/base-imports.scss';
+
+.grid {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+}
+
+.paginacao {
+    padding-left: 0 !important;
+}
+
+td, tr {
+    font-size: 18px
+}
+
+table {
+    border: 1px solid gray;
+}
+
+.formPesquisa {
+    margin-bottom: 20px;
+    padding-right: 0 !important;
+}
