tentando acertar a responsividade do historico lances

--- a/pages/historicoLances/historicoLances.scss
+++ b/pages/historicoLances/historicoLances.scss
@@ -11,9 +11,11 @@
     margin-bottom: 1px;
 }
 
+
 .right {
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;    
+    align-items: center;
+    height: 50%;    
 }
