--- a/components/sidebar/sidebar.scss
+++ b/components/sidebar/sidebar.scss
@@ -11,7 +11,7 @@
 .buttonsSidebar {
     display: flex;
     flex-direction: column;
-    gap: calc(100% / 30);
+    gap: 25px;
     margin-top: calc(100% / 20);
 }
 
