--- a/pages/historicoLances/historicoLances.scss
+++ b/pages/historicoLances/historicoLances.scss
@@ -1,8 +1,14 @@
 @import './../../libs/base-imports.scss';
 
+@media only screen and (min-width: 600px) and (max-width: 1024px) {
+    body, html {
+      width: 1500px !important;
+      height: 1000px !important;
+    }
+  }
+
 .content {
     display: flex;
-    height: 100%;
     flex-grow: 1 !important;
 }
 
@@ -16,6 +22,5 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    height: 50%;    
+    align-items: center; 
 }
