--- a/libs/base-imports.scss
+++ b/libs/base-imports.scss
@@ -11,7 +11,11 @@ html, body {
     justify-content: space-between;
 }
 
-
 .row {
     width: 100%;
+}
+
+.invalid-feedback {
+    position: absolute;
+    width: 0px;
 }
