adição de todos cruds

--- a/components/sidebar/sidebar.html
+++ b/components/sidebar/sidebar.html
@@ -22,6 +22,38 @@
                 <p>Histórico de lances</p>
                 <hr class="hrSidebar">
             </div>
+            <div class="buttonSidebar" onclick="window.location.href='./../../pages/cadastroMarca/cadastroMarca.php'">
+                <p>Cadastro de marca</p>
+                <hr class="hrSidebar">
+            </div>
+            <div class="buttonSidebar" onclick="window.location.href='./../../pages/cadastroCor/cadastroCor.php'">
+                <p>Cadastro de cor</p>
+                <hr class="hrSidebar">
+            </div>
+            <div class="buttonSidebar" onclick="window.location.href='./../../pages/cadastroModelo/cadastroModelo.php'">
+                <p>Cadastro de modelo</p>
+                <hr class="hrSidebar">
+            </div>
+            <div class="buttonSidebar" onclick="window.location.href='./../../pages/cadastroModeloCor/cadastroModeloCor.php'">
+                <p>Cadastro de modelo cor</p>
+                <hr class="hrSidebar">
+            </div>
+            <div class="buttonSidebar" onclick="window.location.href='./../../pages/cadastroVeiculo/cadastroVeiculo.php'">
+                <p>Cadastro de veiculo</p>
+                <hr class="hrSidebar">
+            </div>
+            <div class="buttonSidebar" onclick="window.location.href='./../../pages/cadastroLeilao/cadastroLeilao.php'">
+                <p>Cadastro de leilao</p>
+                <hr class="hrSidebar">
+            </div>
+            <div class="buttonSidebar" onclick="window.location.href='./../../pages/cadastroFinanceira/cadastroFinanceira.php'">
+                <p>Cadastro de financeira</p>
+                <hr class="hrSidebar">
+            </div>
+            <div class="buttonSidebar" onclick="window.location.href='./../../pages/cadastroLote/cadastroLote.php'">
+                <p>Cadastro de lote</p>
+                <hr class="hrSidebar">
+            </div>
 
         </div>
 
