melhorias nas validações e responsividade do sistema;

--- a/pages/cadastroLote/cadastroLote.scss
+++ b/pages/cadastroLote/cadastroLote.scss
@@ -34,3 +34,9 @@ input[type="date"]:valid::before {
 	content: "" !important;
 }
 
+@media (max-width: 768px) {
+    html, body {
+        width: 1200px !important;
+        height: 1150px !important;
+    }
+}
