Criando página de eventos

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -11,8 +11,8 @@
 
     <footer>
 
-        <a href="">Contato</a>
-        <a href="">Localização</a>
+        <a href="./../../pages/contato/contato.php">Contato</a>
+        <a href="./../../pages/eventos/eventos.php">Eventos</a>
         <a href="">Leilões</a>
         <a href="./../../pages/login/login.php">Minha Conta</a>
 
