Adição de botões em eventos e ajustando responsividade do footer

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <footer>
+    <footer class="col-12 w-100">
 
         <a href="./../../pages/contato/contato.php">Contato</a>
         <a href="./../../pages/eventos/eventos.php">Eventos</a>
