adição do email do usuário no header, caso esteja logado

--- a/components/header/header.html
+++ b/components/header/header.html
@@ -22,6 +22,7 @@
 
         <div class="userLogo" onclick="window.location.href='./../../pages/login/login.php'">
 
+            <p class="userName">matheus@hotmail.com</p>
             <i class="fa-solid fa-circle-user"></i>
 
         </div>
