--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -18,6 +18,8 @@ header {
 .userLogo {
     cursor: pointer;
     margin-right: calc(100% / 45);
+    display: flex;
+    align-items: center;
 }
 
 .button {
@@ -51,4 +53,12 @@ hr {
 .userLogo i {
     color: white;
     font-size: 40px;
+}
+
+.userName {
+    color: white;
+    font-size: 16px;
+    font-family: sans-serif;
+    margin: 0;
+    margin-right: 10px;
 }
