--- a/components/sidebar/sidebar.scss
+++ b/components/sidebar/sidebar.scss
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-top: calc(100% / 20);
+    margin-top: 20px;
 }
 
 .buttonSidebar {
