ajustando caminho do footer

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -12,8 +12,7 @@
     <footer class="col-12 w-100">
 
         <a href="./../../pages/contato/contato.php">Contato</a>
-        <a href="./../../pages/eventos/eventos.php">Eventos</a>
-        <a href="">Leilões</a>
+        <a href="./../../pages/leiloes/leiloes.php">Leilões</a>
         <a href="./../../pages/login/login.php">Minha Conta</a>
 
     </footer>
