ajustando caminho de leilao no header

--- a/components/header/header.html
+++ b/components/header/header.html
@@ -13,7 +13,7 @@
 
         <div class="buttons">
 
-            <div class="button" onclick="">
+            <div class="button" onclick="window.location.href='./../../pages/leiloes/leiloes.php'">
                 <p>Leilões</p>
                 <hr>
             </div>
