--- a/components/header/header.html
+++ b/components/header/header.html
@@ -13,6 +13,11 @@
 
         <div class="buttons">
 
+            <div class="button" onclick="window.location.href='./../../pages/index/index.php'">
+                <p>Home</p>
+                <hr>
+            </div>
+
             <div class="button" onclick="window.location.href='./../../pages/leiloes/leiloes.php'">
                 <p>Leilões</p>
                 <hr>
