--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -1,13 +1,5 @@
 @import './../../libs/base-imports.scss';
-
-header {
-    width: 100%;
-    height: 75px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #3065AC;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 .buttons {
     display: flex;
@@ -20,6 +12,7 @@ header {
     margin-right: calc(100% / 45);
     display: flex;
     align-items: center;
+    z-index: -300;
 }
 
 .button {
@@ -30,21 +23,21 @@ header {
 }
 
 .button:hover, .userLogo:hover {
-    transform: scale(1.25);
+    transform: scale(0.85);
     transition: transform 0.5s ease;
 }
 
 .button p {
     color: white;
-    font-size: 20px;
-    font-family: sans-serif;
+    font-size: 16px;
     margin-bottom: 5px !important;
+    font-family: 'Montserrat', sans-serif;
 }
 
 hr {
     background-color: rgb(255, 255, 255) !important;
     height: 2px !important;
-    width: 80px !important;
+    width: 70px !important;
     opacity: 1 !important;
     margin-top: 0 !important;
     margin-bottom: 0 !important;
@@ -53,6 +46,7 @@ hr {
 .userLogo i {
     color: white;
     font-size: 40px;
+    display: flex;
 }
 
 .userName {
