Finalizando header e montando organização do index

--- a/components/header/header.html
+++ b/components/header/header.html
@@ -10,9 +10,9 @@
     <body>
         
         <nav class="navbar sticky-top navbar-expand-lg bg-info">
-            <div class="container d-flex align-items-center mx-2">
+            <div class="container d-flex justify-content-around align-items-center mx-2">
             
-                <a class="navbar-brand" onclick="window.location.href='./../../pages/index/index.php'">
+                <a class="navbar-brand button" onclick="window.location.href='./../../pages/index/index.php'">
                     <img class="w-100" src="./../../components/header/logo.svg" alt="">
                 </a>
 
@@ -21,18 +21,18 @@
                 </button>
             
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto w-25 d-flex justify-content-around align-items-center">
-                        <div class="button" onclick="window.location.href='./../../pages/index/index.php'">
+                    <ul class="navbar-nav mr-auto d-flex justify-content-around align-items-center">
+                        <div class="button mx-2 m-2" onclick="window.location.href='./../../pages/index/index.php'">
                             <p>Home</p>
                             <hr>
                         </div>
 
-                        <div class="button" onclick="window.location.href='./../../pages/contato/contato.php'">
+                        <div class="button mx-2 m-2" onclick="window.location.href='./../../pages/contato/contato.php'">
                             <p>Contato</p>
                             <hr>
                         </div>
 
-                        <div class="button" onclick="window.location.href='./../../pages/leiloes/leiloes.php'">
+                        <div class="button mx-2 m-2" onclick="window.location.href='./../../pages/leiloes/leiloes.php'">
                             <p>Leilões</p>
                             <hr>
                         </div>                       
@@ -40,7 +40,7 @@
                 </div>
             </div>
 
-            <div class="collapse navbar-collapse mx-3" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse mx-3 m-2" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">               
                     <div class="button mt-2 d-flex flex-row" onclick="window.location.href='./../../pages/login/login.php'">
                         <p class="userName">matheus@hotmail.com</p>
