--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -7,12 +7,12 @@
     margin-left: calc(100% / 40);
 }
 
-// .userLogo {
-//     cursor: pointer;
-//     margin-right: calc(100% / 45);
-//     display: flex;
-//     align-items: center;
-// }
+.userLogo {
+    cursor: pointer;
+    margin-right: calc(100% / 45);
+    display: flex;
+    align-items: center;
+}
 
 .button {
     cursor: pointer;
@@ -24,13 +24,13 @@
 }
 
 .button:hover, .userLogo:hover {
-    transform: scale(0.85);
+    transform: scale(0.9);
     transition: transform 0.5s ease;
 }
 
 .button p {
     color: white;
-    font-size: 16px;
+    font-size: 20px;
     margin-bottom: 5px !important;
     font-family: 'Montserrat', sans-serif;
 }
@@ -38,7 +38,7 @@
 hr {
     background-color: rgb(255, 255, 255) !important;
     height: 2px !important;
-    width: 70px !important;
+    width: 80px !important;
     opacity: 1 !important;
     margin-top: 0 !important;
     margin-bottom: 0 !important;
