--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -9,7 +9,7 @@
 
 .userLogo {
     cursor: pointer;
-    margin-right: calc(100% / 45);
+    margin-right: calc(100% / 55);
     display: flex;
     align-items: center;
 }
@@ -20,7 +20,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-right: calc(100% / 45);
+    padding-right: calc(100% / 55);
 }
 
 .button:hover, .userLogo:hover {
