adicionando get e post na tela de dados cadastrais

--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -57,3 +57,9 @@ hr {
     margin: 0;
     margin-right: 10px;
 }
+
+.userLogoImg { 
+    width: 32px !important;
+    height: 32px !important;
+    border-radius: 50% !important;
+}
